--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>This page is currently closed check back later!</h1>
+<head>
+    <title>Coming Soon!</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <h1>This page is currently closed check back later!</h1>
+  <h2>This site will be opened soon!</h2>
+</body>
