--- a/index.html
+++ b/index.html
@@ -9,15 +9,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+    ></script>
+
     <script defer src="scripts/home.js"></script>
 
     <title>Nebular Games</title>
   </head>
   <body>
-    <canvas id="hero-canvas"></canvas>
-
-    <h1>This Is A Test</h1>
+    <header>
+      <canvas id="hero-canvas"></canvas>
+      <div class="bg"></div>
+    </header>
+    <section class="projects">
+      <div class="section-box"><p>Test</p></div>
+    </section>
   </body>
 </html>
