--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <script defer src="scripts/home.js"></script>
 
-    <title>Nebular Games</title>
+    <title>Nebular Games - Home</title>
   </head>
   <body>
     <header>
