--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
   <body>
     <header>
       <canvas id="hero-canvas"></canvas>
-      <div class="bg"></div>
+      <div class="hero-box"><h1>nebular.games</h1></div>
     </header>
     <section class="projects">
-      <div class="section-box"><p>Test</p></div>
     </section>
   </body>
 </html>
