--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       <canvas id="hero-canvas"></canvas>
       <div class="hero-box"><h1>nebular.games</h1></div>
     </header>
-    <section class="projects">
+
+    <section class="section-items">
     </section>
   </body>
 </html>
