--- a/404.html
+++ b/404.html
@@ -53,6 +53,8 @@
     <h1 class="error">404</h1>
     <p>
       The file you requested was not found. <br />
+    <br>
+    You are not skibidi rizz ohio sigma. <br />
       <a class="return-home" href="https://nebular.games/">Go back</a>
     </p>
   </body>
