--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
       </div>
 
       <div class="row">
+        <h3>lorem</h3>
         <div class="col">
-          <a href="#" class="game-card">
+          <a href="" target="_blank" rel="noopener" class="game-card">
             <div class="text">
               <span class="title">lorem</span>
               <span class="description">lorem ipsum dolor</span>
