--- a/404.html
+++ b/404.html
@@ -16,6 +16,7 @@
         color: white;
         margin: 0;
         padding: 0;
+        font-size: calc(16px + 2 * ((100vw - 320px) / 680));
       }
 
       .error {
@@ -23,7 +24,7 @@
         top: 40%;
         left: 50%;
         color: rgb(246, 49, 49);
-        font-size: 30vmax;
+        font-size: 15em;
         transform: translate(-50%, -50%);
         padding: 0;
         margin: 0;
@@ -33,7 +34,7 @@
         position: fixed;
         left: 50%;
         top: 65%;
-        font-size: 2.5vmax;
+        font-size: 1.5em;
         text-align: center;
         transform: translate(-50%, -50%);
       }
