--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
 
       <div class="row">
         <div class="col">
-          <h3 class="center">sample text</h3>
-          <p>Sample text</p>
+          <h3 class="center">Coming Soon</h3>
+          <p>This website is in a very early stage of development we thank you for your patients all operations and/or support is still  on PiChat.</p>
         </div>
 
         <!-- <div class="col">
