--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
       </div>
 
       <div class="row">
-        <h3>lorem</h3>
+        <h3>Priorities</h3>
         <div class="col">
-          <a href="" target="_blank" rel="noopener" class="game-card">
+          <a href="https://chat.nebular.games" target="_blank" rel="noopener" class="game-card">
             <div class="text">
-              <span class="title">lorem</span>
-              <span class="description">lorem ipsum dolor</span>
+              <span class="title">PiChat</span>
+              <span class="description">PiChat, A chatroom hosted by Nebular Games.</span>
             </div>
             <div class="arrow">
               <span></span>
@@ -99,10 +99,10 @@
           </a>
         </div>
         <div class="col">
-          <a href="" target="_blank" rel="noopener" class="game-card">
+          <a href="https://nebular.games/#" target="_blank" rel="noopener" class="game-card">
             <div class="text">
-              <span class="title">lorem</span>
-              <span class="description">lorem ipsum dolor</span>
+              <span class="title">PiChat Blue (Not Realesed)</span>
+              <span class="description">A custom chatroom Nebular's developers are building from the ground up.</span>
             </div>
             <div class="arrow">
               <span></span>
@@ -198,7 +198,7 @@
       <div class="row">
         <div class="col">
           <h3 class="center">Coming Soon</h3>
-          <p>This website is in a very early stage of development we thank you for your patients all operations and/or support is still  on PiChat.</p>
+          <p>This website is in a very early stage of development we thank you for your patience all operations and/or support are still on PiChat.</p>
         </div>
 
         <!-- <div class="col">
