format + grammar fixes

--- a/index.html
+++ b/index.html
@@ -88,10 +88,17 @@
       <div class="row">
         <h3>Priorities</h3>
         <div class="col">
-          <a href="https://chat.nebular.games" target="_blank" rel="noopener" class="game-card">
+          <a
+            href="https://chat.nebular.games"
+            target="_blank"
+            rel="noopener"
+            class="game-card"
+          >
             <div class="text">
               <span class="title">PiChat</span>
-              <span class="description">PiChat, A chatroom hosted by Nebular Games.</span>
+              <span class="description"
+                >A Mattermost-based chatroom hosted by Nebular Games.</span
+              >
             </div>
             <div class="arrow">
               <span></span>
@@ -99,10 +106,18 @@
           </a>
         </div>
         <div class="col">
-          <a href="https://nebular.games/#" target="_blank" rel="noopener" class="game-card">
+          <a
+            href="https://nebular.games/#"
+            target="_blank"
+            rel="noopener"
+            class="game-card"
+          >
             <div class="text">
-              <span class="title">PiChat Blue (Not Realesed)</span>
-              <span class="description">A custom chatroom Nebular's developers are building from the ground up.</span>
+              <span class="title">PiChat Blue (unreleased)</span>
+              <span class="description"
+                >A discord-themed remake of PiChat being built from scratch in
+                React.js by Xenon.</span
+              >
             </div>
             <div class="arrow">
               <span></span>
@@ -129,58 +144,31 @@
 
       <div class="row">
         <div class="col">
-          <h3>sample text</h3>
-          <a href="#" class="game-card">
+          <a
+            href="https://nebular.games/#"
+            target="_blank"
+            rel="noopener"
+            class="game-card"
+          >
             <div class="text">
-              <span class="title">Sample Text</span>
-              <span class="description">sample text</span>
+              <span class="title">Placeholder</span>
+              <span class="description">placeholder</span>
             </div>
             <div class="arrow">
               <span></span>
             </div>
           </a>
-          <a href="#" class="game-card">
+        </div>
+        <div class="col">
+          <a
+            href="https://nebular.games/#"
+            target="_blank"
+            rel="noopener"
+            class="game-card"
+          >
             <div class="text">
-              <span class="title">Sample Text</span>
-              <span class="description">sample text</span>
-            </div>
-            <div class="arrow">
-              <span></span>
-            </div>
-          </a>
-          <h3>lorem ipsum</h3>
-          <a href="#" class="game-card">
-            <div class="text">
-              <span class="title">Sample Text</span>
-              <span class="description">sample text</span>
-            </div>
-            <div class="arrow">
-              <span></span>
-            </div>
-          </a>
-          <a href="#" class="game-card">
-            <div class="text">
-              <span class="title">Sample Text</span>
-              <span class="description">sample text</span>
-            </div>
-            <div class="arrow">
-              <span></span>
-            </div>
-          </a>
-          <h3>more sample text</h3>
-          <a href="#" class="game-card">
-            <div class="text">
-              <span class="title">Sample Text</span>
-              <span class="description">sample text</span>
-            </div>
-            <div class="arrow">
-              <span></span>
-            </div>
-          </a>
-          <a href="#" class="game-card">
-            <div class="text">
-              <span class="title">Sample Text</span>
-              <span class="description">sample text</span>
+              <span class="title">Placeholder</span>
+              <span class="description">placeholder</span>
             </div>
             <div class="arrow">
               <span></span>
@@ -197,8 +185,11 @@
 
       <div class="row">
         <div class="col">
-          <h3 class="center">Coming Soon</h3>
-          <p>This website is in a very early stage of development we thank you for your patience all operations and/or support are still on PiChat.</p>
+          <h3 class="center">nebular.games is under construction</h3>
+          <p class="center">
+            This website is not finished. We're actively working on it as we
+            speak.
+          </p>
         </div>
 
         <!-- <div class="col">
