--- a/index.html
+++ b/index.html
@@ -139,20 +139,20 @@
 
     <section class="section-games">
       <div class="row">
-        <h2>fun</h2>
+        <h2>Other Projects</h2>
       </div>
 
       <div class="row">
         <div class="col">
           <a
-            href="https://nebular.games/#"
+            href="https://nebular.games/services"
             target="_blank"
             rel="noopener"
             class="game-card"
           >
             <div class="text">
-              <span class="title">Placeholder</span>
-              <span class="description">placeholder</span>
+              <span class="title">Nebular Services</span>
+              <span class="description">Nebular Services, a new option for website hosting.</span>
             </div>
             <div class="arrow">
               <span></span>
@@ -161,14 +161,14 @@
         </div>
         <div class="col">
           <a
-            href="https://nebular.games/#"
+            href="https://nebular.games/under-maintenance"
             target="_blank"
             rel="noopener"
             class="game-card"
           >
             <div class="text">
-              <span class="title">Placeholder</span>
-              <span class="description">placeholder</span>
+              <span class="title">Unavailable</span>
+              <span class="description">Under Maintenance</span>
             </div>
             <div class="arrow">
               <span></span>
