--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           >
             <div class="text">
               <span class="title">Unavailable</span>
-              <span class="description">Under Maintenance</span>
+              <span class="description">Coming Soon!</span>
             </div>
             <div class="arrow">
               <span></span>
