--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             class="game-card"
           >
             <div class="text">
-              <span class="title">PiChat Blue (unreleased)</span>
+              <span class="title">PiChat Blue (discontinued)</span>
               <span class="description"
                 >A discord-themed remake of PiChat being built from scratch in
                 React.js by Xenon.</span
