--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@
         </div>
         <div class="col">
           <a
-            href="https://nebular.games/under-maintenance"
+            href="https://nebular.games/paytreon"
             target="_blank"
             rel="noopener"
             class="game-card"
           >
             <div class="text">
-              <span class="title">Unavailable</span>
-              <span class="description">Coming Soon!</span>
+              <span class="title">Our Patreon</span>
+              <span class="description">Nebular takes a lot of money to run and we thank you for your support, feel free to donate!</span>
             </div>
             <div class="arrow">
               <span></span>
