--- a/patreon.html
+++ b/patreon.html
@@ -1,1 +1,6 @@
-<meta http-equiv="refresh" content="delay_time; URL=https://patreon.com/nebulargames" />
+<head>
+  <meta http-equiv="refresh" content="delay_time; URL=https://patreon.com/nebulargames" />
+</head>
+<body>
+  <h1>You are being redirected please wait.</h1>
+</body>
