--- a/patreon.html
+++ b/patreon.html
@@ -1,4 +1,5 @@
 <head>
+  <title>Nebular - Patreon</title>
   <meta http-equiv="refresh" content="delay_time; URL=https://patreon.com/nebulargames" />
 </head>
 <body>
