--- a/patreon.html
+++ b/patreon.html
@@ -4,4 +4,5 @@
 </head>
 <body>
   <h1>You are being redirected please wait.</h1>
+  <h3>If your don't get redirected click </h3> <p><a href="https://patreon.com/nebulargames">here!</a></p>
 </body>
