--- a/patreon.html
+++ b/patreon.html
@@ -1,6 +1,6 @@
 <head>
   <title>Nebular - Patreon</title>
-  <meta http-equiv="refresh" content="delay_time; URL=https://patreon.com/nebulargames" />
+  <meta http-equiv="refresh" content="0; url=https://patreon.com/nebulargames" />
 </head>
 <body>
   <h1>You are being redirected please wait.</h1>
