--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </div>
         <div class="col">
           <a
-            href="https://nebular.games/patreon"
+            href="patreon.com/nebulargames"
             target="_blank"
             rel="noopener"
             class="game-card"
