--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           >
             <div class="text">
               <span class="title">Our Patreon</span>
-              <span class="description">Nebular takes a lot of money to run and we thank you for your support, feel free to donate!</span>
+              <span class="description">Managing a server isn't easy. We appreciate any and all donations and your support is what keeps us motivated.</span>
             </div>
             <div class="arrow">
               <span></span>
