--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
     <section class="section-about">
       <div class="row">
-        <h2>Other stuff</h2>
+        <h2>information</h2>
       </div>
 
       <div class="row">
