--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
             class="game-card"
           >
             <div class="text">
-              <span class="title">Nebular Services</span>
-              <span class="description">Nebular Services, a new option for website hosting.</span>
+              <span class="title">hosting</span>
+              <span class="description">We now offer website building and rental of our subdomains.</span>
             </div>
             <div class="arrow">
               <span></span>
