--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
     <section class="section-banner">
       <div class="banner-box">
         <h1>
-          More <br />
-          Experiments
+          Our <br />
+          Team
         </h1>
-        <a href="./extras/" class="go">visit</a>
+        <a href="./staff/" class="go">visit</a>
       </div>
     </section>
 
