--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             class="game-card"
           >
             <div class="text">
-              <span class="title">hosting</span>
+              <span class="title">website hosting</span>
               <span class="description">We now offer website building and rental of our subdomains.</span>
             </div>
             <div class="arrow">
@@ -165,7 +165,7 @@
             class="game-card"
           >
             <div class="text">
-              <span class="title">Our Patreon</span>
+              <span class="title">patreon</span>
               <span class="description">Managing a server isn't easy. We appreciate any and all donations and your support is what keeps us motivated.</span>
             </div>
             <div class="arrow">
