--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <meta property="og:description" content="Games, web apps, and more!" />
     <meta property="og:url" content="https://nebular.games/" />
     <meta property="og:image" content="https://nebular.games/media/logo.png" />
-
-    <link rel="shortcut icon" href="/favicon.ico" />
+    
+    <link rel="icon" type="image/x-icon" href="/media/favicon.png">
 
     <link rel="preload" href="/media/mountain.jpg" as="image" />
     <link rel="preload" href="/modern-normalize.min.css" as="style" />
