--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="description" content="Games, web apps, and more!" />
     <meta
       name="keywords"
-      content="nebular, games, selfhosted, chat, nebular-games, fun"
+      content="nebular, games, selfhosted, chat, nebular-games, fun, nebular.games"
     />
-    <meta name="theme-color" content="#d63031" />
+    <meta name="theme-color" content="#5D3FD3" />
 
     <meta property="og:title" content="Nebular Games" />
     <meta property="description" content="Games, web apps, and more!" />
