--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:url" content="https://nebular.games/" />
     <meta property="og:image" content="https://nebular.games/media/logo.png" />
     
-    <link rel="icon" type="image/x-icon" href="/media/favicon.png">
+    <link rel="icon" type="image/x-icon" href="https://nebular.games/media/favicon.png">
 
     <link rel="preload" href="/media/mountain.jpg" as="image" />
     <link rel="preload" href="/modern-normalize.min.css" as="style" />
