--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             class="game-card"
           >
             <div class="text">
-              <span class="title">PiChat</span>
+              <span class="title">Nebular Connect</span>
               <span class="description"
                 >A Mattermost-based chatroom hosted by Nebular Games.</span
               >
