--- a/index.html
+++ b/index.html
@@ -111,10 +111,9 @@
             class="game-card"
           >
             <div class="text">
-              <span class="title">PiChat Blue (discontinued)</span>
+              <span class="title">PiChat (discontinued)</span>
               <span class="description"
-                >A discord-themed remake of PiChat being built from scratch in
-                React.js by Xenon.</span
+                >The old version of PiChat is still out but is no longer receiving support for issues.</span
               >
             </div>
             <div class="arrow">
@@ -159,7 +158,7 @@
         </div>
         <div class="col">
           <a
-            href="patreon.com/nebulargames"
+            href="https://patreon.com/nebulargames"
             target="_blank"
             rel="noopener"
             class="game-card"
