--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="col">
           <a
-            href="https://nebular.games/#"
+            href="https://legacy.nebular.games/"
             target="_blank"
             rel="noopener"
             class="game-card"
