--- a/cam.html
+++ b/cam.html
@@ -1,1 +1,1 @@
-<iframe src="https://cam.nebular.games/21b54f05-a0ae-45ae-ae2a-975a328df5f1.html"> iframe>
+<iframe src="https://cam.nebular.games/21b54f05-a0ae-45ae-ae2a-975a328df5f1.html"> </iframe>
