--- a/staff.html
+++ b/staff.html
@@ -48,7 +48,7 @@
     </style>
   </head>
   <body>
-    <h1 class="maintenance">Under Work</h1>
+    <h2 class="maintenance">Maintenance</h2>
     <p>
       This page is currently under maintenance, please try again later! <br />
       <a class="return-home" href="https://nebular.games/">Go back</a>
