--- a/index.html
+++ b/index.html
@@ -103,6 +103,26 @@
             </div>
           </a>
         </div>
+      <div class="row">
+        <h3>Secondary</h3>
+        <div class="col">
+          <a
+            href="https://nebular.games/hosting"
+            target="_blank"
+            rel="noopener"
+            class="game-card"
+          >
+            <div class="text">
+              <span class="title">Website Hosting</span>
+              <span class="description"
+                >A service by Nebular Games that provides customers with an exultant experience when hosting their website.</span
+              >
+            </div>
+            <div class="arrow">
+              <span></span>
+            </div>
+          </a>
+        </div>
       </div>
     </section>
 
@@ -118,20 +138,52 @@
 
     <section class="section-games">
       <div class="row">
-        <h2>Other Projects</h2>
+        <h2>Social Media</h2>
       </div>
 
       <div class="row">
         <div class="col">
           <a
-            href="https://nebular.games/services"
+            href="https://nebular.games/twitter"
             target="_blank"
             rel="noopener"
             class="game-card"
           >
             <div class="text">
-              <span class="title">website hosting</span>
-              <span class="description">We now offer website building and rental of our subdomains.</span>
+              <span class="title">x (twitter)</span>
+              <span class="description">Follow us on X for updates and announcements!</span>
+            </div>
+            <div class="arrow">
+              <span></span>
+            </div>
+          </a>
+        </div>
+        <div class="col">
+          <a
+            href="https://nebular.games/tiktok"
+            target="_blank"
+            rel="noopener"
+            class="game-card"
+          >
+            <div class="text">
+              <span class="title">tiktok</span>
+              <span class="description">Follow us on TikTok for updates and announcements!</span>
+            </div>
+            <div class="arrow">
+              <span></span>
+            </div>
+          </a>
+        </div>
+        <div class="col">
+          <a
+            href="https://nebular.games/discord"
+            target="_blank"
+            rel="noopener"
+            class="game-card"
+          >
+            <div class="text">
+              <span class="title">discord</span>
+              <span class="description">Join our Discord for community projects, updates, and announcements!</span>
             </div>
             <div class="arrow">
               <span></span>
