--- a/twitter.html
+++ b/twitter.html
@@ -1,1 +1,12 @@
-<meta http-equiv="refresh" URL=https://x.com/Nebular_Games" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="3;url=https://x.com/Nebular_Games">
+    <title>Redirecting</title>
+</head>
+<body>
+    <p>If you are not redirected automatically, click this</a>.</p><a href="https://x.com/Nebular_Games">
+</body>
+</html>
