--- a/bye.html
+++ b/bye.html
@@ -36,8 +36,9 @@
     </style>
   </head>
   <body>
-    <h1 class="font">Thank you for everything we had so much fun making something everyone loved. But as the saying goes "All good things must come to an end." we had so much fun making stuff you guys loved. But as of 9/20/24 Nebular Games has seized operations. We thank you for all the suggestions and the countless bugs we fixed. It was such a fun time.</h1>
+    <h1 class="font">Thank you for everything this experiment was so fun but as of 9/27/2024 Nebular Games and all related operations have officially been seized. As a Nebular owner, seeing something grow to such great lengths has been amazing to watch, and knowing it was something my team and I made was cool. But as the saying goes "All good things must come to a end." Nebular Games will not be returning. We thank you for participating in our experiment and hope we influenced your view on technology. You were and forever will be known as a member of the Nebular Games community.. Thank you.</h1>
     <h2 class="font">The Nebular team thanks you.</h2>
-    <h4 class="font">Goodbye. - The Nebular Team</h5>
+    <h4 class="font">Goodbye. - The Nebular Team</h4>
+    <h5 class="font">9/27/2024</h5>
   </body>
 </html>
