--- a/bye.html
+++ b/bye.html
@@ -13,7 +13,12 @@
       color: #ffffff;
       text-align: center;
       }
-
+      
+      h5 {
+      color: #ffffff;
+      text-align: center;
+      }
+      
       h2 {
       color: #ffffff;
       text-align: center;
