--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,9 @@
-<h1>Page failed to load try again later.</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Nebular Games - Privacy</title>
+  </head>
+  <body></body>
