--- a/drum-line-vr/privacy.html
+++ b/drum-line-vr/privacy.html
@@ -63,7 +63,7 @@
     <p>We retain your information only for as long as needed to fulfill the purposes outlined in this policy or as required by law. Gameplay data may be retained in an anonymized format for historical analytics.</p>
 
     <h2>5. Your Rights and Choices</h2>
-    <p>Depending on your location, you may have rights regarding your personal information, including the right to access, correct, delete, or restrict its use. If you would like to exercise any of these rights, please contact us at [contact email].</p>
+    <p>Depending on your location, you may have rights regarding your personal information, including the right to access, correct, delete, or restrict its use. If you would like to exercise any of these rights, please contact us at drum-line-vr@nebular.games.</p>
 
     <h2>6. Security</h2>
     <p>We employ various security measures to protect your data from unauthorized access and disclosure. However, no system can guarantee complete security, and we encourage you to take personal steps to secure your account information.</p>
