--- a/drum-line-vr/privacy.html
+++ b/drum-line-vr/privacy.html
@@ -76,7 +76,7 @@
 
     <h2>9. Contact Us</h2>
     <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
-    <p>Email: drum-line-vr@nebular.games</p>
+    <p>Email: <a href="mailto:drum-line-vr@nebular.games">drum-line-vr@nebular.games</a></p>
 
 </body>
 </html>
