--- a/drum-line-vr/terms.html
+++ b/drum-line-vr/terms.html
@@ -59,7 +59,7 @@
     <h2>9. Limitations of Liability</h2>
     <p>Nebular Games is not liable for any damages or losses resulting from your use of <em>Drum Line VR</em>, including but not limited to data loss, device damage, or interruption of service. Your use of the game is at your own risk.</p>
 
-    <h2>10. Contact Information</h2>
+    <h2>10. Contact Us</h2>
     <p>If you have any questions about these Terms of Service, please contact us at:</p>
     <p>Email: <a href="mailto:drum-line-vr@nebular.games">drum-line-vr@nebular.games</a></p>
 
