--- a/drum-line-vr/index.html
+++ b/drum-line-vr/index.html
@@ -1,1 +1,69 @@
-<h1>Coming Soon!!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Coming Soon</title>
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: Arial, sans-serif;
+    }
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: #ffffff;
+        color: #000;
+        overflow: hidden;
+    }
+    .content {
+        text-align: center;
+        opacity: 0;
+        animation: fadeIn 1s ease-in forwards;
+        animation-delay: 0.5s;
+    }
+    .typing-text {
+        font-size: 3rem;
+        font-weight: bold;
+        color: #000;
+        overflow: hidden;
+        white-space: nowrap;
+        border-right: 3px solid #000;
+        animation: typing 3s steps(20, end), blink 0.75s step-end infinite;
+        text-shadow: 0 0 2px rgba(0, 0, 0, 0.5), 
+                     0 0 4px rgba(0, 0, 0, 0.3),
+                     0 0 6px rgba(0, 0, 0, 0.2);
+    }
+    .info-text {
+        margin-top: 20px;
+        font-size: 1.2rem;
+        color: #333;
+        opacity: 0;
+        animation: fadeIn 1s ease-in forwards;
+        animation-delay: 3s;
+    }
+    @keyframes fadeIn {
+        from { opacity: 0; }
+        to { opacity: 1; }
+    }
+    @keyframes typing {
+        from { width: 0; }
+        to { width: 100%; }
+    }
+    @keyframes blink {
+        from, to { border-color: transparent; }
+        50% { border-color: #000; }
+    }
+</style>
+</head>
+<body>
+    <div class="content">
+        <div class="typing-text">Coming Soon</div>
+        <div class="info-text">Nebular Games presents Drum Line VR...</div>
+    </div>
+</body>
+</html>
