--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
             class="game-card"
           >
             <div class="text">
-              <span class="title">Nebular Connect</span>
+              <span class="title">Drum Line VR</span>
               <span class="description"
-                >A Mattermost-based chatroom hosted by Nebular Games.</span
+                >A new VR game that allows you play in a drum line like never before!</span
               >
             </div>
             <div class="arrow">
@@ -103,28 +103,6 @@
             </div>
           </a>
         </div>
-      <div class="row">
-        <h3>Secondary</h3>
-        <div class="col">
-          <a
-            href="https://nebular.games/hosting"
-            target="_blank"
-            rel="noopener"
-            class="game-card"
-          >
-            <div class="text">
-              <span class="title">Website Hosting</span>
-              <span class="description"
-                >A service by Nebular Games that provides customers with an exultant experience when hosting their website.</span
-              >
-            </div>
-            <div class="arrow">
-              <span></span>
-            </div>
-          </a>
-        </div>
-      </div>
-    </section>
 
     <section class="section-banner">
       <div class="banner-box">
