--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h3>Priorities</h3>
         <div class="col">
           <a
-            href="https://chat.nebular.games"
+            href="https://nebular.games/drum-line-vr"
             target="_blank"
             rel="noopener"
             class="game-card"
@@ -103,7 +103,22 @@
             </div>
           </a>
         </div>
-
+        
+      <div class="row">
+        <h3>Coming Soon!</h3>
+        <div class="col">
+          <a
+            href="https://nebular.games/#"
+            target="_blank"
+            rel="noopener"
+            class="game-card"
+          >
+            <div class="arrow">
+              <span></span>
+            </div>
+          </a>
+        </div>
+        
     <section class="section-banner">
       <div class="banner-box">
         <h1>
