--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
             rel="noopener"
             class="game-card"
           >
+            <div class="text">
+              <span class="title">Coming Soon!</span>
+              <span class="description"
+                >Coming Soon!</span
+              >
+            </div>            
             <div class="arrow">
               <span></span>
             </div>
