--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
             </div>
           </a>
         </div>
+      </div>
+      
         
     <section class="section-banner">
       <div class="banner-box">
