--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           </a>
         </div>
       </div>
-      
+    </section>
         
     <section class="section-banner">
       <div class="banner-box">
@@ -209,7 +209,6 @@
         </div>
       </div>
     </section>
-<br>
 
 
     <section class="section-about">
