--- a/staff/kar.html
+++ b/staff/kar.html
@@ -1,1 +1,22 @@
-
+<html>
+  <head>
+    <title>Hi, i'm Kar!</title>
+  </head>
+  <body>
+    <div class="forground"><a class="header"><img src="/PfpIcon 1.png" style="width:100px;height:100px;"><div class="horizontalgap" style="width:15px"></div><h1>Kar</h1></a><div class="box">About Me</div><div class="textarea"><p>Hello, my name is Sparkk!</p>
+      <h2>
+                I am a scripter, graphic designer, bad clothing designer,
+                coolest person, better thean you (btw), not weird (trust), and
+                game developer
+      </h2>
+    </div>
+      <a class="button" href="https://example.com">PLUH</a>
+      <a class="button" href="https://example.com">PLUH</a>
+    </div>
+  </body>
+  <style>
+      @font-face{font-family:FigtreeVF;src:url(chrome-extension://majdfhpaihoncoakbjgbdhglocklcgno/fonts/FigtreeVF.woff2) 
+      format("woff2 supports variations"),url(chrome-extension://majdfhpaihoncoakbjgbdhglocklcgno/fonts/FigtreeVF.woff2) 
+      format("woff2-variations");font-weight:100 1000;font-display:swap}
+  </style>
+</html>
