--- a/staff/kar.html
+++ b/staff/kar.html
@@ -2,6 +2,9 @@
   <head>
     <title>Hi, i'm Kar!</title>
   </head>
+  <style>
+  @font-face{font-family:ReadexPro;src:url(/fonts/ReadexPro.ttf);font-weight:400;font-style:normal;font-display:swap}@font-face{font-family:ReadexProL;src:url(/fonts/ReadexPro-ExtraLight.ttf);font-weight:400;font-style:normal;font-display:swap}html{background-color:#090500;font-family:ReadexProL}body{margin:auto;width:100%;height:100vh;line-height:1;display:flex;align-items:center}*{box-sizing:border-box}p{color:#f0f8ff;margin:1rem 0;line-height:normal;font-size:large}.textarea{height:fit-content;width:fit-content}h1{font-weight:500;color:#f0f8ff;margin:1rem 0;font-size:4rem;font-weight:900}h2{color:#f0f8ff7c;margin:1rem 0;line-height:normal;font-size:large;font-weight:500}.box{width:510px;height:50px;border:1px solid rgba(240,248,255,.242);background-color:#ffffff08;padding:10px;margin:5px;display:flex;align-items:center;align-self:center;font-family:ReadexProL;border-radius:8px;font-size:20px;color:#ffffff86}.forground{width:540px;height:fit-content;padding:20px;margin:auto;display:flex;flex-direction:column;border-radius:8px;color:#f0f8ff;align-self:center}.button{width:510px;height:50px;background-color:#f9c23c;padding:10px;margin:5px;display:flex;align-items:center;align-self:center;font-family:ReadexPro;font-size:20px;text-decoration:none;color:#070213}.horizontalgap{float:left;overflow:hidden;height:1px;width:0px}.header{width:fit-content;height:fit-content;display:flex;flex-direction:row;margin-bottom:10px}
+  </style>
   <body>
     <div class="forground"><a class="header"><img src="/PfpIcon 1.png" style="width:100px;height:100px;"><div class="horizontalgap" style="width:15px"></div><h1>Kar</h1></a><div class="box">About Me</div><div class="textarea"><p>Hello, my name is Sparkk!</p>
       <h2>
